# sat_track

./: .gitignore  main.py  pyproject.toml  test_ws_client.py
.planning/plans/: 001-PLAN.md
backend/: README.md  requirements.txt
backend/app/: config.py  main.py  orbits.py  scheduler.py  state.py  tle_pipeline.py
backend/app/routes/: groundtrack.py  passes.py  satellites.py  ws.py
data/: tles.parquet
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: GlobeView.tsx  ObserverControls.tsx  PassPlot.tsx
frontend/src/hooks/: useSatelliteStream.ts
prompts/: 001-satellite-tracker-full-stack.md
