[project]
name = "sat-track"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.1",
    "fastapi>=0.123.5",
    "polars>=1.35.2",
    "skyfield>=1.53",
    "uvicorn[standard]>=0.38.0",
    "websockets>=14.2",
    "pydantic-settings>=2.7.0",
]
